Arreglar bug on el csv no es transmetia correctament entre contenidors